--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-10-24}
+\date{2023-11-06}
 
 \begin{document}
 \maketitle
@@ -1285,73 +1285,10 @@ The involvement of the community takes many forms, from contributing content, to
 
 This chapter is about the ways people can contribute to R's documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).
 
-\hypertarget{guidelines-for-writing-r-help-files}{%
-\section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
+\hypertarget{introduction-to-.rd-files}{%
+\section{\texorpdfstring{Introduction to \texttt{.Rd} files}{Introduction to .Rd files}}\label{introduction-to-.rd-files}}
 
-The help files for R functions are written in `R documentation' (\texttt{.Rd}) file format. It is a simple markup language with close resemblance to LaTeX. The \texttt{.Rd} file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The \texttt{.Rd} files can be found in the \texttt{man} directory of the sources for the corresponding base package. For example, consider the \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}{mean.Rd} file.
-
-\begin{verbatim}
-% File src/library/base/man/mean.Rd
-% Part of the R package, https://www.R-project.org
-% Copyright 1995-2022 R Core Team
-% Distributed under GPL 2 or later
-
-\name{mean}
-\title{Arithmetic Mean}
-\usage{
-mean(x, \dots)
-
-\method{mean}{default}(x, trim = 0, na.rm = FALSE, \dots)
-}
-\alias{mean}
-\alias{mean.default}
-\arguments{
-  \item{x}{An \R object.  Currently there are methods for
-    numeric/logical vectors and \link[=Dates]{date},
-    \link{date-time} and \link{time interval} objects.  Complex vectors
-    are allowed for \code{trim = 0}, only.}
-  \item{trim}{the fraction (0 to 0.5) of observations to be
-    trimmed from each end of \code{x} before the mean is computed.
-    Values of trim outside that range are taken as the nearest endpoint.
-  }
-  \item{na.rm}{a logical evaluating to \code{TRUE} or \code{FALSE}
-    indicating whether \code{NA} values should be stripped before the
-    computation proceeds.} 
-  \item{\dots}{further arguments passed to or from other methods.}
-}
-\description{
-  Generic function for the (trimmed) arithmetic mean.
-}
-\value{
-  If \code{trim} is zero (the default), the arithmetic mean of the
-  values in \code{x} is computed, as a numeric or complex vector of
-  length one.  If \code{x} is not logical (coerced to numeric), numeric
-  (including integer) or complex, \code{NA_real_} is returned, with a warning.
-
-  If \code{trim} is non-zero, a symmetrically trimmed mean is computed
-  with a fraction of \code{trim} observations deleted from each end
-  before the mean is computed.
-}
-\references{
-  Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
-  \emph{The New S Language}.
-  Wadsworth & Brooks/Cole.
-}
-\seealso{
-  \code{\link{weighted.mean}}, \code{\link{mean.POSIXct}},
-  \code{\link{colMeans}} for row and column means.
-}
-\examples{
-x <- c(0:10, 50)
-xm <- mean(x)
-c(xm, mean(x, trim = 0.10))
-}
-\keyword{univar}
-\end{verbatim}
-
-Many authors of contributed R packages use the \href{https://cran.r-project.org/package=roxygen2}{roxygen2} package to write documentation, which generates \texttt{.Rd} files from comments in the package \texttt{.R} files. However, the help files in the base distribution are maintained by directly editing the \texttt{.Rd} files.
-
-This section gives an overview of the \texttt{.Rd} format and summarises the \href{https://developer.r-project.org/Rds.html}{guidelines for writing the R help files}. The guidelines are intended for contributors to base R, but may also be useful for authors of contributed packages. Full documentation on writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+The R help files are written in ``R documentation'' (Rd) format, a markup language which resembles LaTeX. The \texttt{.Rd} file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The \texttt{.Rd} files can be found in the \texttt{man} directory of the source code for the corresponding package.
 
 There are three main parts of an \texttt{.Rd} file:
 
@@ -1438,6 +1375,74 @@ All the above information is included in a \texttt{.Rd} file within a series of 
   \end{itemize}
 \end{enumerate}
 
+For example, the help file for \texttt{base::mean()} is found at \url{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}. The file\texttt{mean.Rd} has the content shown below:
+
+\begin{verbatim}
+% File src/library/base/man/mean.Rd
+% Part of the R package, https://www.R-project.org
+% Copyright 1995-2022 R Core Team
+% Distributed under GPL 2 or later
+
+\name{mean}
+\title{Arithmetic Mean}
+\usage{
+mean(x, \dots)
+
+\method{mean}{default}(x, trim = 0, na.rm = FALSE, \dots)
+}
+\alias{mean}
+\alias{mean.default}
+\arguments{
+  \item{x}{An \R object.  Currently there are methods for
+    numeric/logical vectors and \link[=Dates]{date},
+    \link{date-time} and \link{time interval} objects.  Complex vectors
+    are allowed for \code{trim = 0}, only.}
+  \item{trim}{the fraction (0 to 0.5) of observations to be
+    trimmed from each end of \code{x} before the mean is computed.
+    Values of trim outside that range are taken as the nearest endpoint.
+  }
+  \item{na.rm}{a logical evaluating to \code{TRUE} or \code{FALSE}
+    indicating whether \code{NA} values should be stripped before the
+    computation proceeds.} 
+  \item{\dots}{further arguments passed to or from other methods.}
+}
+\description{
+  Generic function for the (trimmed) arithmetic mean.
+}
+\value{
+  If \code{trim} is zero (the default), the arithmetic mean of the
+  values in \code{x} is computed, as a numeric or complex vector of
+  length one.  If \code{x} is not logical (coerced to numeric), numeric
+  (including integer) or complex, \code{NA_real_} is returned, with a warning.
+
+  If \code{trim} is non-zero, a symmetrically trimmed mean is computed
+  with a fraction of \code{trim} observations deleted from each end
+  before the mean is computed.
+}
+\references{
+  Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
+  \emph{The New S Language}.
+  Wadsworth & Brooks/Cole.
+}
+\seealso{
+  \code{\link{weighted.mean}}, \code{\link{mean.POSIXct}},
+  \code{\link{colMeans}} for row and column means.
+}
+\examples{
+x <- c(0:10, 50)
+xm <- mean(x)
+c(xm, mean(x, trim = 0.10))
+}
+\keyword{univar}
+\end{verbatim}
+
+Many R package developers write help files using the R package \href{https://cran.r-project.org/package=roxygen2}{roxygen2}, which generates \texttt{.Rd} files from comments in the corresponding \texttt{.R} files. However, in this guide we only consider \texttt{.Rd} files, because the help files for the base distribution are written and edited directly in \texttt{.Rd} format.
+
+\hypertarget{guidelines-for-writing-r-help-files}{%
+\section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
+
+This section is based on the \href{https://developer.r-project.org/Rds.html}{guidelines used by R Core developers for writing R help files}. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+
 The language used in the documentations should follow these basic rules:
 
 \begin{enumerate}
@@ -1453,8 +1458,6 @@ The language used in the documentations should follow these basic rules:
 \item
   The tone of the documentation needs to be respectful of the reader's background. Lay out the relevant information, show motivating use cases, provide glossary links, and do your best to connect-the-dots. The documentation is meant for newcomers, many of whom will be using it to evaluate the R language as a whole. The experience needs to be positive and not leave the reader with worries that something bad will happen if they make a mistake.
 \end{enumerate}
-
-Extensive details of writing R documentation files can be found \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{here}.
 
 \hypertarget{r-manuals}{%
 \section{R manuals}\label{r-manuals}}
